# libpkce

./: .gitignore  COPYING  ChangeLog  HEADER-USAGE.md  Makefile.am  NEWS  README  README-CONFIG.md  README-PACKAGING.md  build-package.sh  configure.ac  libpkce.pc.in  validate-packaging.sh
debian/: changelog  control  copyright  libpkce-dev.docs  libpkce-dev.install  libpkce0.docs  libpkce0.install  libpkce0.symbols  not-installed  pkce-tools.docs  pkce-tools.install  rules  watch
include/libpkce/: CallbackServer.hpp  exchange_token.hpp  generate_code_challenge.hpp  generate_code_verifier.hpp  token_utils.hpp
src/: .gitignore  CallbackServer.cpp  CallbackServer.hpp  Config.hpp  Makefile.am  config-example.json  config-github.json  config-google.json  config-microsoft.json  exchange_token.cpp  exchange_token.hpp  generate_code_challenge.cpp  generate_code_verifier.cpp  main.cpp  openssl_compat.h  token_utils.cpp
